--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -19,15 +19,15 @@
   <thead>
     <tr>
       <th><%= check_box_tag "select_all" %></th>
-      <th><%= sortable "ref", "Your Invoice Ref" %></th>
-      <th><%= sortable "suppler_ref", "Supplier Ref (name)" %></th>
-      <th><%= sortable "suppler_name", "Supplier Name (email)" %></th>
-      <th><%= sortable "invoice_number", "Invoice Number (company name)" %></th>
-      <th><%= sortable "description", "Description" %></th>
-      <th><%= sortable "invoice_date", "Invoice Date" %></th>
-      <th><%= sortable "due_date", "Due Date" %></th>
-      <th><%= sortable "invoice_curr", "Invoice Currency" %></th>
-      <th><%= sortable "invoice_amount", "Invoice Amount" %></th>
+      <th><%= sortable "ref", "E Saving" %></th>
+      <th><%= sortable "suppler_ref", "E First name" %></th>
+      <th><%= sortable "suppler_name", "E Email" %></th>
+      <th><%= sortable "invoice_number", "E Company name" %></th>
+      <th><%= sortable "description", "E Interest Rate" %></th>
+      <th><%= sortable "invoice_date", "x Invoice Date" %></th>
+      <th><%= sortable "due_date", "xDue Date" %></th>
+      <th><%= sortable "invoice_curr", "x Invoice Currency" %></th>
+      <th><%= sortable "invoice_amount", "xInvoice Amount" %></th>
       <th><%= sortable "status", "Invoice Status" %></th>
       <th><%= sortable "supplier_email", "Supplier Email" %></th>
       <th><%= sortable "prop_settlement_date", "Proposed Settlement Date" %></th>
