--- a/app/views/offer_mailer/offer_email.html.erb
+++ b/app/views/offer_mailer/offer_email.html.erb
@@ -1,12 +1,20 @@
-<p>Dear <%= @pin.suppler_ref %>,
+<p>Hi <%= @pin.suppler_ref %>,</p>
 
-<p>Your suppliers need cash. You have cash sitting in the bank, earning close to zero interest!</p>
+<p>Apologies for the email out of the blue. My name is Paul and I am the Commercial Director of a new company called Invoicely.</p>
 
-<p>Our company Invoicely has a solution. We provide software to enable you to send early payment offers to your suppliers in return for your chosen level of discount. Quite simply, we can help you earn double digit APR's on your cash whilst keeping your suppliers happy.</p>
+<p>Having looked at your accounts on Companies House I can see that <%= @pin.invoice_number %> has a very healthy cash balance. Given the historic low rates of interest, however, earning a decent return at the bank has become near impossible.</p>
 
-<p>What's even better is that we only charge you a % of savings made, so there is NO risk from your side.</p>
+<p>My company can help deliver a far superior return on your cash, with absolutely no risk. Our software facilitates something called dynamic discounting - where you can offer your suppliers early payment on invoices in return for a discount on the invoice value. You simply set the discount you want - expressed as an APR - and our software manages the pricing and offer process with your chosen suppliers, requiring no change to your existing invoice acceptance or payment processes. Other businesses are already achieving double-digit APR’s with this technology.</p>
 
-<p>We would love to tell you more over a phone call. Please let me know when would be convenient.</p>
+<p>It is totally flexible - offer early payment only when you have the cash, and only to your chosen suppliers.</p>
 
-<p>Many thanks,</p>
-Paul
+<p>The savings we can provide will go straight to your bottom line and we estimate that for  <%= @pin.invoice_number %> they would have a material impact on net profit margin. What’s more, you keep your suppliers happy as they don’t need to borrow or factor their invoices for much needed cash flow.</p>
+
+<p>I would love the opportunity to discuss this with you (or someone in your team) over the phone or in person. I assure you there are no gimmicks here. Our mission at Invoicely is to unlock inefficient cash flow in supply chains across the UK and we are already working wih several major corporations in this regard. </p>
+
+<p>I hope to hear back from you.</p>
+
+<p>Kind regards,</p>
+<p>Paul</p>
+<p>paulroiter@gmail.com</p>
+<p>07903276249</p>
