--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,20 +9,20 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "Invoice Butler", root_path, class: "navbar-brand" %>
+        <%= link_to "Invoicely", root_path, class: "navbar-brand" %>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
             <li><%= link_to "Dashboard", dashboard_path %></li>
-            <li><%= link_to "Account Settings", edit_user_registration_path %></li>
+            <li><%#= link_to "Account Settings", edit_user_registration_path %></li>
             <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
           <% else %>
             <li><%= link_to "Home", root_path %></li>
-            <li><%= link_to "Team", team_path %></li>
+            <li><%#= link_to "Team", team_path %></li>
             <li><%= link_to "About", about_path %></li>
-            <li><%= link_to "Log in", new_user_session_path %></li>
+            <li><%= link_to "Supplier Log in", new_user_session_path %></li>
           <% end %>
 
         </ul>
