--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,10 @@
 <div class="jumbotron center">
-	<h1>Welcome to Invoice Butler!</h1>
+	<h1>Welcome to Invoicely!</h1>
 	<% if user_signed_in? %>
 	<% else %>
 		<p>
 			<%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
-			<%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+			<%#= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
 		</p>
 	<% end %>
 
