offer accepting & rejecting

--- a/app/views/offer_mailer/offers_email.html.erb
+++ b/app/views/offer_mailer/offers_email.html.erb
@@ -39,7 +39,9 @@
   </tbody>
 </table>
 
-<p>To accept click here<p>
+<p>To accept click <a href=<%= @pins.first.string %>>here</a><p>
+
+
 
 <p>If you have any questinos please get in touch,<p>
 
