--- a/app/views/pins/acceptedoffers.html.erb
+++ b/app/views/pins/acceptedoffers.html.erb
@@ -1,6 +1,6 @@
 
 <div class="center">
-  <%= render 'layouts/dashboardpages' %>
+  <%= render 'layouts/supplierdashboardpages' %>
 </div>
 
 <br><br>
