--- a/app/views/layouts/_dashboardpages.html.erb
+++ b/app/views/layouts/_dashboardpages.html.erb
@@ -1,7 +1,7 @@
 <ul class="list-inline">
+	<li><%= link_to "All Users", dashboard_path %></li>
 	<li><%= link_to "All Invoices", all_invoices_path %></li>
 	<li><%= link_to "Import Invoices", importinvoices_path %></li>
 	<li><%= link_to "Sent Offers", pendingoffers_path %></li>
-	<li><%= link_to "Accepted Offers", acceptedoffers_path %></li>
-	<li><%= link_to "Offers Received (#{@action_count})", offersreceived_path %></li>
+	<li><%= link_to "Responded Offers", acceptedoffersadmin_path %></li>
 </ul>
