--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -62,6 +62,11 @@
   </div>
 
   <div class="form-group">
+    <%= f.label "Email Button Link" %>
+    <%= f.email_field :string, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
     <%= f.label "Proposed Settlement Date" %>
     <%= f.date_select :prop_settlement_date, class: "form-control" %>
   </div>
