--- a/app/views/pins/acceptedoffers.html.erb
+++ b/app/views/pins/acceptedoffers.html.erb
@@ -5,7 +5,9 @@
 
 <br><br>
 <br><br>
-
+<% if @pinsaccepted.first %>
+<p><b>Accepted</b></p>
+<p>You have accepted an early payment on below invoices:</p>
 <table class="invtable">
   <thead>
     <tr>
@@ -24,12 +26,10 @@
       <th><%= sortable "offer_amount", "New Invoice Amount" %></th>
       <th><%= sortable "saving", "Money Saved" %></th>
       <th><%= sortable "offer_accepted_date", "Offer Accepted Date" %></th>
-<!--       <th>Edit</th>
-      <th>Delete</th> -->
     </tr>
   </thead>
   <tbody>
-    <% @pins.each do |pin| %>
+    <% @pinsaccepted.each do |pin| %>
       <tr>
         <th><%= pin.ref %></th>
         <th><%= pin.suppler_ref %></th>
@@ -46,16 +46,69 @@
         <th><%= pin.offer_amount %></th>
         <th><%= pin.saving %></th>
         <th><%= pin.offer_accepted_date %></th>
-<!--         <th><%= link_to edit_pin_path(pin) do %><span class="glyphicon glyphicon-pencil"></span> Edit<% end %></th>
-        <th><%= link_to pin, method: :delete, data: { confirm: 'Are you sure?' } do %><span class="glyphicon glyphicon-trash"></span> Delete<% end %></th> --> 
       </tr>
     <% end %>  
   </tbody>
 </table>
+  <div class="center">
+   <%= will_paginate @pinsaccepted, renderer: BootstrapPagination::Rails %>
+  </div>
+<% end %>
+
+<br>
+<br><br>
+
+<% if @pinsrejected.first %>
+  <p><b>Rejected</b></p>
+  <p>Offers were rejected on the below invoice(s):</p>
+  <table class="invtable">
+    <thead>
+      <tr>
+        <th><%= sortable "ref", "Your Invoice Ref" %></th>
+        <th><%= sortable "suppler_ref", "Supplier Ref" %></th>
+        <th><%= sortable "suppler_name", "Supplier Name" %></th>
+        <th><%= sortable "invoice_number", "Invoice Number" %></th>
+        <th><%= sortable "description", "Description" %></th>
+        <th><%= sortable "invoice_date", "Invoice Date" %></th>
+        <th><%= sortable "due_date", "Old Due Date" %></th>
+        <th><%= sortable "invoice_curr", "Invoice Currency" %></th>
+        <th><%= sortable "invoice_amount", "Old Invoice Amount" %></th>
+        <th><%= sortable "offer_sent_date", "Offer Sent Date" %></th>
+        <th><%= sortable "status", "Offer Status" %></th>
+        <th><%= sortable "prop_settlement_date", "New Due Date" %></th>
+        <th><%= sortable "offer_amount", "New Invoice Amount" %></th>
+        <th><%= sortable "saving", "Money Saved" %></th>
+        <th><%= sortable "offer_accepted_date", "Offer Accepted Date" %></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @pinsrejected.each do |pin| %>
+        <tr>
+          <th><%= pin.ref %></th>
+          <th><%= pin.suppler_ref %></th>
+          <th><%= pin.suppler_name %></th>
+          <th><%= pin.invoice_number %></th>
+          <th><%= pin.description %></th>
+          <th><%= pin.invoice_date %></th>
+          <th><%= pin.due_date %></th>
+          <th><%= pin.invoice_curr %></th>
+          <th><%= pin.invoice_amount %></th>
+          <th><%= pin.offer_sent_date %></th>
+          <th><%= pin.status %></th>
+          <th><%= pin.prop_settlement_date %></th>
+          <th><%= pin.offer_amount %></th>
+          <th><%= pin.saving %></th>
+          <th><%= pin.offer_accepted_date %></th>
+        </tr>
+      <% end %>  
+    </tbody>
+  </table>
+  <div class="center">
+   <%= will_paginate @pinsrejected, renderer: BootstrapPagination::Rails %>
+  </div>
+  <br>
+  <p>If you'd like a new offer on any rejected invoices please email us <%= mail_to 'fatface.offers@invoicely.co.uk' do %>fatface.offers@invoicely.co.uk<% end %>.</p>
+<% end %>
 
 
-
-<div class="center">
-   <%= will_paginate @pins, renderer: BootstrapPagination::Rails %>
-</div>
 
