--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -14,6 +14,12 @@
       </div>
 
       <div class="form-group">
+        <%= f.label :user_name %>
+        <%= f.text_field :user_name, class: "form-control", :autofocus => true %>
+      </div>
+      </div>
+
+      <div class="form-group">
         <%= f.label :email %>
         <%= f.email_field :email, class: "form-control", :autofocus => true %>
       </div>
