--- a/app/views/pins/acceptedoffers.html.erb
+++ b/app/views/pins/acceptedoffers.html.erb
@@ -1,10 +1,18 @@
+<h1>Welcome <%= current_user.user_name %></h1>
+<hr style="height: 2px; background-color: grey;"></hr>
 
 <div class="center">
   <%= render 'layouts/supplierdashboardpages' %>
 </div>
 
+
+
 <br><br>
 <br><br>
+<% if !@pinsaccepted.first && !@pinsrejected.first %>
+ <p>You currently have no offer history</p>
+<% end %>
+
 <% if @pinsaccepted.first %>
 <p><b>Accepted</b></p>
 <p>You have accepted an early payment on below invoices:</p>
@@ -59,8 +67,8 @@
 <br><br>
 
 <% if @pinsrejected.first %>
-  <p><b>Rejected</b></p>
-  <p>Offers were rejected on the below invoice(s):</p>
+  <p><b>Rejected/Expired</b></p>
+  <p>Offers were rejected/expired on the below invoice(s):</p>
   <table class="invtable">
     <thead>
       <tr>
@@ -107,7 +115,7 @@
    <%= will_paginate @pinsrejected, renderer: BootstrapPagination::Rails %>
   </div>
   <br>
-  <p>If you'd like a new offer on any rejected invoices please email us <%= mail_to 'fatface.offers@invoicely.co.uk' do %>fatface.offers@invoicely.co.uk<% end %>.</p>
+  <p>If you'd like a new offer on any rejected/expired invoices please email us <%= mail_to 'fatface.offers@invoicely.co.uk' do %>fatface.offers@invoicely.co.uk<% end %>.</p>
 <% end %>
 
 
